--- a/src/app/app.html
+++ b/src/app/app.html
@@ -23,7 +23,7 @@
 
         <ion-row no-padding class="other-data">
           <ion-col no-padding class="column">
-            <button ion-button icon-left small full color="light" menuClose disabled>
+            <button ion-button icon-left small full color="light" menuClose (click)="goToProfile()">
               <ion-icon name="contact"></ion-icon>
               Profile
             </button>
